# sprint-sync

./: .prototools  Dockerfile.prod  Dockerfile.testing  README.md  SprintSync Estimates.csv  entrypoint.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  image-build.yml
.moon/: toolchain.yml  workspace.yml
apps/ai/: README.md  moon.yml  poetry.toml  pyproject.toml
apps/ai/src/ai/: __init__.py  schemas.py
apps/ai/src/ai/llm/: callback_handler.py  states.py  suggest_task.py
apps/ai/src/ai/routes/: suggest.py
apps/api-service/: .env.template  README.md  docker-compose.yml  eslint.config.mjs  moon.yml  nest-cli.json  package.json  tsconfig.json
apps/api-service/src/: app.module.ts  main.ts  setupApplication.ts
apps/api-service/src/auth/: auth.controller.ts  auth.guard.ts  auth.module.ts  currentUser.decorator.ts  login.service.ts  loginRequest.dto.ts  loginResponse.dto.ts
apps/api-service/src/dtos/: profile.dto.ts  task.dto.ts  user.dto.ts
apps/api-service/src/filters/: allExceptions.filter.ts
apps/api-service/test/: login.e2e-spec.ts  profile.e2e-spec.ts  task.e2e-spec.ts
apps/frontend/: README.md  docker-compose.yml  eslint.config.mjs  moon.yml  package.json  tsconfig.json
apps/frontend/app/: layout.tsx  page.tsx
apps/seeder/: README.md  eslint.config.mjs  moon.yml  package.json  tsconfig.json
apps/seeder/src/: createUserTasks.ts  createUsers.ts  main.ts
deploy/: Pulumi.production.yaml  Pulumi.yaml  index.ts  package.json
infra/: Pulumi.production.yaml  Pulumi.yaml  index.ts  package.json
(+65 files in other folders)
